optimizations, adaptations for new property mgmt framework. Some classes may still be removed.
git-svn-id: https://pmd.svn.sourceforge.net/svnroot/pmd/trunk@6678 51baf565-9d33-0410-a72c-fc3788e3496d